# rust-fs

./: .env  Cargo.toml
migrations/2024-03-06-131516_personal_info/: down.sql  up.sql
migrations/2024-03-13-143412_create_personal_info/: down.sql  up.sql
migrations/2024-03-14-122144_personal_info/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src/routes/: mod.rs  personal_info.rs
tests/: test_db_connection.rs
