[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
diesel = { version = "2.1.5", features = ["postgres", "chrono", "serde_json", "r2d2"] }
dotenvy = "0.15"
serde_json = "1.0"
chrono = { version = "0.4.35", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }


